Thu Nov 17 10:05:08 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Thu Nov 17 07:35:20 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * performance-tests/Latency/DSI/Roundtrip.h:
                * performance-tests/Sequence_Latency/DSI/Roundtrip.h:
                * tests/DSI_AMI_Gateway/test_dsi.h:
                  Last runtime fixes

        Wed Nov 16 07:26:18 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * orbsvcs/orbsvcs/CosEvent/CEC_DynamicImplementation.h:
                * orbsvcs/orbsvcs/CosEvent/CEC_TypedProxyPushConsumer.h:
                  Doxygen changes

        Wed Nov 16 07:18:56 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * orbsvcs/performance-tests/LoadBalancing/LBPerf/CPU/Roundtrip.h:
                * orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/Roundtrip.h:
                * orbsvcs/performance-tests/RTEvent/RTCORBA_Baseline/Roundtrip.h:
                * orbsvcs/tests/Bug_2285_Regression/Hello.h:
                * orbsvcs/tests/Bug_2287_Regression/Hello.h:
                * orbsvcs/tests/Bug_2615_Regression/Hello.h:
                * orbsvcs/tests/Bug_2800_Regression/Hello.h:
                * orbsvcs/tests/Bug_2800_Regression/NsShutdown.h:
                * orbsvcs/tests/Bug_3215_Regression/Hello.h:
                * orbsvcs/tests/Bug_3216_Regression/Hello.h:
                * orbsvcs/tests/Bug_3598b_Regression/Hello.h:
                * orbsvcs/tests/Bug_3673_Regression/Hello.h:
                * orbsvcs/tests/Bug_3673_Regression/NsShutdown.h:
                * orbsvcs/tests/COIOP_Naming_Test/Hello.h:
                * orbsvcs/tests/HTIOP/Hello/Hello.h:
                * orbsvcs/tests/InterfaceRepo/IFR_Self_Recursive_IDL_Test/GoodDay.h:
                * performance-tests/Latency/AMH_Single_Threaded/Roundtrip.h:
                * performance-tests/Latency/AMI/Roundtrip.h: