@@ -1,3 +1,8 @@
+Thu Nov 17 11:30:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/ForwardUponObjectNotExist/client.cpp:
+          First shutdown the ORB before destroying it
+
 Thu Nov 17 10:05:08 UTC 2011  Martin Corino  <mcorino@remedy.nl>
 
         Merged changes from Remedy work branch.
